--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile
+        file: ./Dockerfiles/Dockerfile
         push: true
         tags: |
           yangclivia/pandora-to-api:${{ steps.tag_name.outputs.tag }}
