--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -17,21 +16,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up container-registry.oracle.com/graalvm/native-image:21-ol8
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Set execute permissions for mvnw
-      run: chmod +x ./mvnw
-    
+    - name: Set up GraalVM
+      uses: DeLaGuardo/setup-graalvm@4
+      with:
+        graalvm-version: 21.0.0.2
+        java-version: java17
+
+    - name: Set JAVA_HOME
+      run: echo "JAVA_HOME=$(java -XshowSettings:properties -version 2>&1 > /dev/null | grep 'java.home' | awk '{print \\$3}')" >> $GITHUB_ENV
+   
     - name: Build with Maven
       run: ./mvnw native:compile -Pnative
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn deploy -Pnative -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
