--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Maven Package
 
 on:
@@ -18,13 +15,13 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up GraalVM
-      uses: DeLaGuardo/setup-graalvm@4
+      uses: DeLaGuardo/setup-graalvm@v3 # 确保使用正确的版本
       with:
-        graalvm-version: 21.0.0.2
-        java-version: java17
+        graalvm-version: '21.0.0.2' # 此处以正确的版本为准
+        java-version: 'java17'
 
     - name: Set JAVA_HOME
-      run: echo "JAVA_HOME=$(java -XshowSettings:properties -version 2>&1 > /dev/null | grep 'java.home' | awk '{print \\$3}')" >> $GITHUB_ENV
+      run: echo "JAVA_HOME=$(java -XshowSettings:properties -version 2>&1 > /dev/null | grep 'java.home' | awk '{print \\\$3}')" >> $GITHUB_ENV
    
     - name: Build with Maven
       run: ./mvnw native:compile -Pnative
@@ -33,3 +30,4 @@ jobs:
       run: mvn deploy -Pnative -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
+
