--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -15,9 +15,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up GraalVM
-      uses: DeLaGuardo/setup-graalvm@v3 # 确保使用正确的版本
+      uses: DeLaGuardo/setup-graalvm@5.0
       with:
-        graalvm-version: '21.0.0.2' # 此处以正确的版本为准
+        graalvm-version: '21.0.0.2' # 确保这个版本号是正确的，可能需要根据可用的版本进行调整
         java-version: 'java17'
 
     - name: Set JAVA_HOME
