--- a/Dockerfiles/Dockerfile.jvm
+++ b/Dockerfiles/Dockerfile.jvm
@@ -1,5 +1,5 @@
 # 基于Java 17的GraalVM构建镜像
-FROM container-registry.oracle.com/graalvm/jdk:21-ol8 as build
+FROM ghcr.io/graalvm/graalvm-ce:java17-21.3.0 as build
 WORKDIR /app
 COPY . /app
 
