--- a/Dockerfiles/Dockerfile.jvm
+++ b/Dockerfiles/Dockerfile.jvm
@@ -1,5 +1,5 @@
 # 基于Java 17的GraalVM构建镜像
-FROM ghcr.io/graalvm/graalvm-ce:java17-21.3.0 as build
+FROM container-registry.oracle.com/graalvm/native-image:21-ol8 AS builder
 WORKDIR /app
 COPY . /app
 
