--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "gpt3_sleepTime": 0,
   "password": "abc",
-  "get_token_url": "https:\/\/api.cocopilot.org\/copilot_internal\/v2\/token",
+  "get_token_url": "http://124.220.157.23:8800/copilot_internal/v2/token",
   "gpt4_sleepTime": 110
 }
