--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.gpt4.copilot</groupId>
 	<artifactId>gpt-4-copilot-native</artifactId>
 	<version>gpt-4-copilot-native</version>
-	<name>benchmark-jibber</name>
+	<name>gpt-4-copilot-native</name>
     <description>Demo project for Spring Boot with GraalVM Native Image</description>
     <properties>
         <java.version>17</java.version>
