--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "gpt3_sleepTime": 0,
-  "password": "abc",
+  "password": "2602c0f5-7e73-4586-a788-2c856d2eb748",
   "get_token_url": "http:\/\/124.220.157.23:8800\/copilot_internal\/v2\/token",
   "prefix": "\/tokensTool",
   "serverPort": 8081,
