--- a/.github/workflows/docker-image-new.yml
+++ b/.github/workflows/docker-image-new.yml
@@ -1,39 +1,45 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  release:
+    types: [ created ]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag Name'
+        required: true
+
 
 jobs:
-
-  build:
-
+  build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    
-    # 设置 Docker Buildx
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      
-    # 登录 Docker Hub (如果需要推送镜像)
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: actions/checkout@v2
 
-    # 构建并推送镜像
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2.7.0
-      with:
-        context: .
-        file: Dockerfiles/Dockerfile.native
-        push: true
-        tags: yangclivia/gpt4-copilot-java:0.0.4
-        build-args: |
-          APP_FILE=gpt-4-copilot
-        platforms: linux/amd64,linux/arm64
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Set tag name
+        id: tag_name
+        run: |
+          if [ "${{ github.event_name }}" = "release" ]; then
+            echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
+          elif [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "::set-output name=tag::${{ github.event.inputs.tag }}"
+          fi
+
+      - name: Build and push Docker image with Release tag
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfiles/Dockerfile
+          push: true
+          tags: |
+            yangclivia/gpt4-copilot-java:amd64${{ steps.tag_name.outputs.tag }}
+          platforms: linux/amd64
