--- a/.github/workflows/docker-image-new.yml
+++ b/.github/workflows/docker-image-new.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image -Amd64
 
 on:
   release:
@@ -41,5 +41,5 @@ jobs:
           file: ./Dockerfiles/Dockerfile
           push: true
           tags: |
-            yangclivia/gpt4-copilot-java:amd64${{ steps.tag_name.outputs.tag }}
+            yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}-amd64
           platforms: linux/amd64
