--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -6,14 +6,13 @@ WORKDIR /build
 
 # Copy the pom.xml file and download dependencies
 COPY pom.xml .
-RUN ./mvnw dependency:go-offline
+RUN mvn dependency:go-offline
 
 # Copy the rest of the source code
 COPY . .
 
-# Add execute permission to mvnw script and build
-RUN chmod +x mvnw && \
-    ./mvnw --no-transfer-progress native:compile -Pnative
+# Build
+RUN mvn --no-transfer-progress native:compile -Pnative
 
 # The deployment Image
 FROM container-registry.oracle.com/os/oraclelinux:8-slim
@@ -23,3 +22,4 @@ EXPOSE 8080
 # Copy the native executable into the containers
 COPY --from=builder /build/target/gpt-4-copilot app
 ENTRYPOINT ["/app"]
+
