--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -4,12 +4,8 @@ FROM container-registry.oracle.com/graalvm/native-image:21-ol8 AS builder
 # Set the working directory to /home/app
 WORKDIR /build
 
-# Copy the pom.xml file and download dependencies
-COPY pom.xml .
-RUN mvn dependency:go-offline
-
-# Copy the rest of the source code
-COPY . .
+# Copy the source code into the image for building
+COPY . /build
 
 # Add execute permission to mvnw script
 RUN chmod +x mvnw
@@ -23,5 +19,5 @@ FROM container-registry.oracle.com/os/oraclelinux:8-slim
 EXPOSE 8080
 
 # Copy the native executable into the containers
-COPY --from=builder /build/target/gpt-4-copilot gpt-4-copilot
-ENTRYPOINT ["/gpt-4-copilot"]
+COPY --from=builder /build/target/gpt-4-copilot app
+ENTRYPOINT ["/app"] 
