--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -13,11 +13,15 @@ RUN chmod +x mvnw
 # Build
 RUN ./mvnw --no-transfer-progress native:compile -Pnative
 
-# The deployment Image
-FROM container-registry.oracle.com/os/oraclelinux:8-slim
+# Use a lightweight Linux base image with just enough runtime dependencies
+FROM alpine:latest
 
+# Expose port 8080 for the application
 EXPOSE 8080
 
-# Copy the native executable into the containers
-COPY --from=builder /build/target/gpt-4-copilot app
+# Copy the native executable into the container
+COPY --from=builder /build/target/gpt-4-copilot /app
+
+# Set the entry point to run your application
 ENTRYPOINT ["/app"]
+
