--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -20,7 +20,7 @@ FROM alpine:latest
 EXPOSE 8080
 
 # Copy the native executable into the container
-COPY --from=builder /build/target/gpt-4-copilot app
+COPY --from=builder /build/target/gpt-4-copilot /app
 
 RUN chmod +x /app
 
