--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -13,7 +13,11 @@ RUN chmod +x mvnw && \
     rm -rf /root/.m2
 
 # Use Distroless as base image
-FROM container-registry.oracle.com/os/oraclelinux:8-slim
+FROM alpine
+
+RUN apk update \
+    && apk upgrade \
+    && apk add --no-cache tzdata
 
 # Copy the native executable into the containers
 COPY --from=builder /build/target/gpt-4-copilot /app
