--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -1,5 +1,5 @@
 # Using Oracle GraalVM for JDK 17
-FROM devatherock/graalvm:21-ol8 AS builder
+FROM oracle/graalvm-ce:21.0.0.2 as builder
 
 # Set the working directory to /build
 WORKDIR /build
@@ -9,20 +9,17 @@ COPY . /build
 
 # Add execute permission to mvnw script and build
 RUN chmod +x mvnw && \
-    ./mvnw --no-transfer-progress native:compile -Pnative && \
+    ./mvnw --no-transfer-progress package -Pnative && \
     rm -rf /root/.m2
 
-# Use Distroless as base image
-FROM alpine:latest
+# Use Scratch as base image
+FROM scratch
 
-RUN apk update \
-    && apk upgrade \
-    && apk add --no-cache tzdata
+# Copy the tzdata from builder image
+COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 
 # Copy the native executable into the containers
-COPY --from=builder /build/target/gpt-4-copilot /config/gpt-4-copilot
+COPY --from=builder /build/target/gpt-4-copilot /gpt-4-copilot
 
 # Set the entrypoint
-ENTRYPOINT ["/config/gpt-4-copilot"]
-
-
+ENTRYPOINT ["/gpt-4-copilot"]
