--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,4 +42,5 @@ jobs:
           push: true
           tags: |
             yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}
+            yangclivia/gpt4-copilot-java:latest
           platforms: linux/amd64,linux/arm64
