--- a/Dockerfiles/Dockerfile.jvm
+++ b/Dockerfiles/Dockerfile.jvm
@@ -1,13 +1,20 @@
-# 基于Java 17的GraalVM构建镜像
-FROM container-registry.oracle.com/graalvm/native-image:21-ol8 AS builder
+# 从 sapmachine:17.0.10-jre-ubuntu-jammy 镜像开始构建
+FROM sapmachine:17.0.10-jre-ubuntu-jammy
+
+# 指定维护者的名字
+LABEL maintainer="Yanyutin753"
+
+# 切换到 root 用户
+USER root
+
+# 复制JAR文件到容器的/app目录下
+COPY /target/gpt-4-copilot-0.0.4.jar /app/app.jar
+
+# 切换到/app目录
 WORKDIR /app
-COPY . /app
 
-# 安装native-image工具
-RUN gu install native-image
+# 声明服务运行在8081端口
+EXPOSE 8081
 
-# 使用Maven构建应用程序
-RUN mvn package -DskipTests
-
-# 使用native-image编译成本地二进制文件
-RUN native-image -cp target/benchmark-jibber-0.0.1-SNAPSHOT.jar
+# 指定docker容器启动时运行jar包，适当减少JVM内存分配
+ENTRYPOINT exec java $JAVA_OPTS -Dfile.encoding=UTF-8 -jar app.jar $@
