--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfiles/Dockerfile
+          file: ./Dockerfiles/Dockerfile.native
           push: true
           tags: |
             yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}
