--- a/.github/workflows/jar-image.yml
+++ b/.github/workflows/jar-image.yml
@@ -38,7 +38,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile/Dockerfile.jar
+        file: ./Dockerfiles/Dockerfile.jar
         push: true
         tags: |
           yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}-jar
