--- a/.github/workflows/jar-image.yml
+++ b/.github/workflows/jar-image.yml
@@ -42,5 +42,6 @@ jobs:
         push: true
         tags: |
           yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}-jar
+          yangclivia/gpt4-copilot-java:latest-jar
         platforms: linux/amd64,linux/arm64
         build-args: TARGETPLATFORM=${{ matrix.platform }}
