--- a/.github/workflows/jar-image.yml
+++ b/.github/workflows/jar-image.yml
@@ -43,5 +43,5 @@ jobs:
         tags: |
           yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}-jar
           yangclivia/gpt4-copilot-java:latest-jar
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64/v8
         build-args: TARGETPLATFORM=${{ matrix.platform }}
