--- a/.github/workflows/jar-image.yml
+++ b/.github/workflows/jar-image.yml
@@ -13,9 +13,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64/v8]
     steps:
     - uses: actions/checkout@v2
 
@@ -46,5 +43,4 @@ jobs:
         tags: |
           yangclivia/gpt4-copilot-java:${{ steps.tag_name.outputs.tag }}-jar
           yangclivia/gpt4-copilot-java:latest-jar
-        platforms: ${{ matrix.platform }}
-        build-args: TARGETPLATFORM=${{ matrix.platform }}
+        platforms: linux/amd64,linux/arm64/v8
