--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,4 +1,4 @@
-namname: Build and Upload Spring Boot Native Image with Maven
+name: Build and Upload Spring Boot Native Image with Maven
 
 on:
   push:
