--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,6 +31,9 @@ jobs:
         graalvm-version: '21.3.0' # Ensure this version is compatible with Java 17
         java-version: '17'
         
+    - name: Set JAVA_HOME to GraalVM
+      run: echo "JAVA_HOME=$(java -version 2>&1 | awk -F\" '/version/ {print \$2}')-$(uname -s | tr '[:upper:]' '[:lower:]')" | tee -a $GITHUB_ENV
+
     - name: Set execute permissions for mvnw
       run: chmod +x ./mvnw
       
