--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,6 +26,8 @@ jobs:
         elif [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
           echo "::set-output name=tag::${{ github.event.inputs.tag }}"
         fi
+      shell: bash
+
 
     - name: Set up JDK 17
       uses: actions/setup-java@v2
