--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -87,13 +87,24 @@ jobs:
         draft: false
         prerelease: false
 
-    - name: Upload native image to Release
+    - name: Upload native image to Release (Windows)
+      if: matrix.os == 'windows-latest'
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.check_release.outputs.exists == 'true' && steps.check_release.outputs.upload_url || steps.create_release.outputs.upload_url }}
-        asset_path: ${{ format('./target/gpt-4-copilot-{0}-{1}{2}', steps.tag_name.outputs.tag, matrix.os, matrix.os == 'windows-latest' ? '.exe' : '') }}
-        asset_name: ${{ format('gpt-4-copilot-{0}-{1}{2}', steps.tag_name.outputs.tag, matrix.os, matrix.os == 'windows-latest' ? '.exe' : '') }}
+        asset_path: ./target/gpt-4-copilot-${{ steps.tag_name.outputs.tag }}-${{ matrix.os }}.exe
+        asset_name: gpt-4-copilot-${{ steps.tag_name.outputs.tag }}-${{ matrix.os }}.exe
         asset_content_type: application/octet-stream
 
+    - name: Upload native image to Release (Non-Windows)
+      if: matrix.os != 'windows-latest'
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.check_release.outputs.exists == 'true' && steps.check_release.outputs.upload_url || steps.create_release.outputs.upload_url }}
+        asset_path: ./target/gpt-4-copilot-${{ steps.tag_name.outputs.tag }}-${{ matrix.os }}
+        asset_name: gpt-4-copilot-${{ steps.tag_name.outputs.tag }}-${{ matrix.os }}
+        asset_content_type: application/octet-stream
