更新 maven-publish.yml

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -83,7 +83,7 @@ jobs:
       if: runner.os == 'Windows'
       run: |
         Compress-Archive -Path packaging/* -DestinationPath ./target/gpt-4-copilot-${{ steps.tag_name.outputs.tag }}-${{ matrix.os }}.zip
-      shell: bash
+      shell: powershell
 
     - name: Check if release exists
       id: check_release
