--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>Demo project for Spring Boot with GraalVM Native Image</description>
     <properties>
         <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <dependencies>
         <dependency>
