--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
   "prefix": "",
   "serverPort": 8080,
   "maxPoolSize": 300,
-  "gpt4_sleepTime": 110
+  "gpt4_sleepTime": 100,
+  "vscode_version": "vscode\/1.85.2"
 }
