--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}}
     strategy:
       matrix:
-        os: [ubuntu-latest-amd64,ubuntu-latest-arm64,macos-latest-amd64,macos-latest-arm64,windows-latest-amd64,windows-latest-arm64]
+        os: [ubuntu-latest,macos-latest,windows-latest]
     steps:
     - uses: actions/checkout@v2
 
